--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,8 @@
   border-right: 0px;
   border-top: 0px;
   border-bottom: 1px solid  #999;;
-  width: 400px;
+  width: 90vw;
+  max-width: 400px;
   height: 40px;
 }
 
@@ -270,6 +271,69 @@ em {
   border-radius: 0.5em;
   -webkit-box-shadow: rgba(0, 0, 0, 0.75) 1.5em 0 0 0, rgba(0, 0, 0, 0.75) 1.1em 1.1em 0 0, rgba(0, 0, 0, 0.75) 0 1.5em 0 0, rgba(0, 0, 0, 0.75) -1.1em 1.1em 0 0, rgba(0, 0, 0, 0.5) -1.5em 0 0 0, rgba(0, 0, 0, 0.5) -1.1em -1.1em 0 0, rgba(0, 0, 0, 0.75) 0 -1.5em 0 0, rgba(0, 0, 0, 0.75) 1.1em -1.1em 0 0;
   box-shadow: rgba(0, 0, 0, 0.75) 1.5em 0 0 0, rgba(0, 0, 0, 0.75) 1.1em 1.1em 0 0, rgba(0, 0, 0, 0.75) 0 1.5em 0 0, rgba(0, 0, 0, 0.75) -1.1em 1.1em 0 0, rgba(0, 0, 0, 0.75) -1.5em 0 0 0, rgba(0, 0, 0, 0.75) -1.1em -1.1em 0 0, rgba(0, 0, 0, 0.75) 0 -1.5em 0 0, rgba(0, 0, 0, 0.75) 1.1em -1.1em 0 0;
+}
+
+.i_frame {
+  position: absolute;
+  overscroll-behavior: none;
+  z-index: 2147483647;
+  transform-origin: right bottom;
+  background-color: orange;
+  overflow: hidden;
+  box-shadow: rgba(0, 0, 0, 0.04) 0px 0px 1px, rgba(0, 0, 0, 0.04) 0px 4px 8px, rgba(0, 0, 0, 0.04) 0px 16px 24px, rgba(0, 0, 0, 0.04) 0px 24px 32px;
+}
+.i_frame_minimize {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  fill: #fff;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  border: 0;
+  background: rgba(0,0,0,.16);
+  border-radius: 28px;
+  z-index: 2;
+  color: #fff;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 44px;
+  height: 44px;
+  padding: 0;
+  cursor: pointer;
+  font-weight: 500;
+  font-size: 1rem;
+}
+.i_frame_expand,
+.i_frame_close {
+  position: absolute;
+  cursor: pointer;
+  top: 8px;
+  width: 44px;
+  height: 44px;
+  transform: scale3d(1, 1, 1);
+  display: none;
+  opacity: 1;
+  z-index: 2147483647;
+  padding: 13px 10px 19px 11px;
+  transform-origin: 0 0;
+  border: none;
+  background-color: transparent;
+}
+.i_frame_expand {
+  left: 8px;
+}
+.i_frame_close {
+  right: 8px;
+  right: 8px;
+  fill: #fff;
+  align-items: center;
+  justify-content: center;
+  border: 0;
+  background: rgba(0,0,0,.16);
+  border-radius: 28px;
+  padding: 0;
 }
 
 /* Animation */
